p2/force-app/main/default/objects/Student_Answer__c/Student_Answer__c.object-meta.xml
<CustomObject>
    <label>Student Answer</label>
    <nameField>
        <label>Student Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>