p2/force-app/main/default/objects/Student_Answer__c/fields/A__c.field-meta.xml
<CustomField>
    <fullName>A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A)</label>
    <type>Checkbox</type>
</CustomField>