p2/force-app/main/default/objects/Student_Answer__c/fields/B__c.field-meta.xml
<CustomField>
    <fullName>B__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B)</label>
    <type>Checkbox</type>
</CustomField>