p2/force-app/main/default/objects/Student_Answer__c/fields/D__c.field-meta.xml
<CustomField>
    <fullName>D__c</fullName>
    <defaultValue>false</defaultValue>
    <label>D)</label>
    <type>Checkbox</type>
</CustomField>