p2/force-app/main/default/objects/Student_Answer__c/fields/Exam_Question__c.field-meta.xml
<CustomField>
    <fullName>Exam_Question__c</fullName>
    <label>Exam Question</label>
    <referenceTo>Exam_Question__c</referenceTo>
    <relationshipLabel>Student Answers</relationshipLabel>
    <relationshipName>Student_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>